2018-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/ralloc.c:
	  Allocate some local _Bool to bit registers.

2018-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c:
	  Fix handling of acc for multiplicative operators.
	* src/mcs51/ralloc.c:
	  Fall back to generic registers when running out of bit registers.

2018-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/gen.c,
	  src/SDCCast.c
	  Improve code generation for _Bool.

2018-03-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/mcs51/ralloc.c:
	  Make better use of acc for 8-bit operands.
	* src/SDCCopt.c:
	  Optimize width of temporaries for bit tests.

2018-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/valdiag/Makefile.in: display any actual failure(s)
	  and not just the summary

2018-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c:
	  Remove leftover debug message.

2018-03-21 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/mcs51/ralloc.c,
	  src/mcs51/gen.c:
	  Optimize bitwise operations on global variables.

2018-03-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/scripts/as2gbmap.py:
	  Migrate to Python 2/3.
	* src/z80/ralloc.c,
	  src/stm8/ralloc.c,
	  support/regression/tests/bug-2347.c:
	  Fix bug #2347.
	* device/README,
	  device/examples:
	  Remove outdated examples (bug #2728).

2018-03-19 Philipp Klaus Krause <pkk AT spth.de>

	* configure.ac,
	  configure:
	  Migrate to Python 3.6 for default.

2018-03-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/ralloc.c,
	  src/stm8/ralloc.c:
	  Do not mark global variables as rematerializeable.

2018-03-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/regression/generate-cases.py: apply patch #282 from
	  Diego Herranz
	* support/regression/generate-cases.py,
	* support/regression/HTMLgen.py: use latin-1 encoding for file I/O