@@ -1,5 +1,11 @@
 2018-03-22 Philipp Klaus Krause <pkk AT spth.de>
 
+	* src/mcs51/gen.c,
+	  src/mcs51/ralloc.c:
+	  Improve _Bool handling.
+
+2018-03-22 Philipp Klaus Krause <pkk AT spth.de>
+
 	* src/mcs51/ralloc.c:
 	  Allocate some local _Bool to bit registers.
 
